[workspace.package]
version = "0.3.1"
edition = "2024"
rust-version = "1.88"
license = "MIT"
homepage = "https://github.com/base/node-reth"
repository = "https://github.com/base/node-reth"
exclude = [".github/"]

[workspace]
resolver = "2"
members = ["bin/*", "crates/client/*", "crates/shared/*", "crates/builder/*"]
default-members = ["bin/node", "bin/consensus"]

[workspace.metadata.cargo-udeps.ignore]
normal = ["rustls-platform-verifier"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "packed"
incremental = false

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
# Shared
base-access-lists = { path = "crates/shared/access-lists" }
base-bundles = { path = "crates/shared/bundles" }
base-cli-utils = { path = "crates/shared/cli-utils" }
base-flashtypes = { path = "crates/shared/flashtypes" }
base-primitives = { path = "crates/shared/primitives" }
base-reth-rpc-types = { path = "crates/shared/reth-rpc-types" }
# Client
base-client-node = { path = "crates/client/node" }
base-metering = { path = "crates/client/metering" }
base-txpool = { path = "crates/client/txpool" }
base-flashblocks = { path = "crates/client/flashblocks" }

# reth
reth-ipc = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-evm = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-exex = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-tracing = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-cli = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-cli-commands = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-cli-util = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-provider = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-db-common = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-rpc-layer = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-node-core = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-primitives = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-rpc = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-rpc-eth-api = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-rpc-convert = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-rpc-api = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-optimism-cli = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-optimism-rpc = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch", features = [
    "client",
] }
reth-optimism-evm = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-testing-utils = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-optimism-node = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-e2e-test-utils = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-transaction-pool = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-rpc-eth-types = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-primitives-traits = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-optimism-chainspec = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-optimism-primitives = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-db = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch", features = [
    "op",
] }
reth-chain-state = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-errors = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-payload-builder = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-node-api = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-rpc-engine-api = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-node-ethereum = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-trie = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-trie-common = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-trie-parallel = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-basic-payload-builder = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-chainspec = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-storage-api = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-evm-ethereum = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-execution-errors = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-tasks = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-metrics = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-trie-db = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-payload-primitives = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-execution-types = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-revm = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-payload-builder-primitives = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-payload-util = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-network-peers = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-node-builder = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-tracing-otlp = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-optimism-consensus = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-optimism-forks = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-optimism-payload-builder = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }
reth-optimism-txpool = { git = "https://github.com/base/reth", branch = "danyal/v1.9.3-patch" }

# revm
revm = { version = "31.0.2", features = [
    "std",
    "secp256k1",
    "optional_balance_check",
], default-features = false }
revm-bytecode = { version = "7.1.1", default-features = false }
revm-inspectors = { version = "0.32.0", default-features = false }
revm-database = { version = "9.0.5", default-features = false }
revm-state = { version = "8.1.1", default-features = false }
revm-primitives = { version = "21.0.2", default-features = false }
revm-interpreter = { version = "29.0.1", default-features = false }
revm-inspector = { version = "12.0.0", default-features = false }
revm-context = { version = "11.0.2", default-features = false }
revm-context-interface = { version = "12.0.1", default-features = false }
revm-database-interface = { version = "8.0.5", default-features = false }

# alloy
alloy-rlp = "0.3.10"
alloy-trie = "0.9.1"
alloy-eips = "1.0.41"
alloy-serde = "1.0.41"
alloy-eip7928 = "0.3.0"
alloy-genesis = "1.0.41"
alloy-signer = "1.0.41"
alloy-signer-local = "1.0.41"
alloy-hardforks = "0.4.4"
alloy-provider = { version = "1.0.41", features = [
    "ipc",
    "pubsub",
    "txpool-api",
    "engine-api",
] }
alloy-contract = "1.0.41"
alloy-sol-types = { version = "1.4.1", features = ["json"] }
alloy-sol-macro = "1.4.1"
alloy-primitives = { version = "1.4.1", default-features = false, features = [
    "map-foldhash",
] }
alloy-consensus = { version = "1.0.41", features = ["kzg"] }
alloy-rpc-types = "1.0.41"
alloy-rpc-client = "1.0.41"
alloy-rpc-types-eth = "1.0.41"
alloy-rpc-types-engine = { version = "1.0.41", features = ["ssz"] }
alloy-chains = "0.2.5"
alloy-evm = { version = "0.23.0", default-features = false }
alloy-pubsub = "1.0.41"
alloy-json-rpc = "1.0.41"
alloy-transport-http = "1.0.41"
alloy-network = "1.0.41"
alloy-network-primitives = "1.0.41"
alloy-transport = "1.0.41"
alloy-node-bindings = "1.0.41"
alloy-rpc-types-beacon = { version = "1.0.41", features = ["ssz"] }

# op-alloy
op-alloy-flz = { version = "0.13.1", default-features = false }
op-alloy-network = { version = "0.22.0", default-features = false }
op-alloy-rpc-types = { version = "0.22.0", default-features = false }
op-alloy-consensus = { version = "0.22.0", default-features = false }
op-alloy-rpc-jsonrpsee = { version = "0.22.0", default-features = false }
op-alloy-rpc-types-engine = { version = "0.22.0", default-features = false }
alloy-op-evm = { version = "0.23.3", default-features = false }
alloy-op-hardforks = "0.4.4"

# op-revm
op-revm = { version = "12.0.2", default-features = false }

# kona
kona-registry = "0.4.5"

# tokio
tokio = "1.48.0"
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }

# async
futures = "0.3.31"
reqwest = "0.12.25"
futures-util = "0.3.31"

# rpc
jsonrpsee = "0.26.0"
jsonrpsee-types = "0.26.0"

# cli
vergen = "9.0.6"
vergen-git2 = "1.0.7"
clap = { version = "4.5.53", features = ["derive", "env", "string"] }

# Metrics
metrics = { version = "0.24.3", default-features = false }
prometheus = { version = "0.14.0", default-features = false }
metrics-process = { version = "2.4.2", default-features = false }
metrics-exporter-prometheus = { version = "0.18.1", default-features = false }

# misc
url = "2.5.7"
lru = "0.16.3"
rand = "0.9.2"
uuid = "1.19.0"
time = { version = "0.3.44", features = ["macros", "formatting", "parsing"] }
rayon = "1.11"
clap_builder = "4.5.19"
eyre = "0.6.12"
bytes = "1.11.0"
brotli = "8.0.2"
chrono = "0.4.42"
rstest = "0.26.1"
serde = "1.0.228"
rustls = "0.23.35"
httpmock = "0.8.2"
tracing = "0.1.43"
arc-swap = "1.7.1"
once_cell = "1.21.3"
itertools = "0.14.0"
derive_more = "2.1.0"
serde_json = "1.0.145"
metrics-derive = "0.1.0"
tracing-subscriber = "0.3.22"
tracing-appender = "0.2"
thiserror = "2.0"
async-trait = "0.1.83"
parking_lot = "0.12.3"
auto_impl = "1.2.0"
serde_with = "3.8.1"
secp256k1 = "0.30"
either = { version = "1.15.0", default-features = false }
tokio-util = { version = "0.7.4", features = ["codec"] }
warp = "0.3.7"
flate2 = "1.0.37"
ctor = "0.2"
dashmap = "6.1"
hex = "0.4"
lazy_static = "1.4.0"
tikv-jemallocator = "0.6"
ahash = "0.8.6"
opentelemetry = { version = "0.31", features = ["trace"] }
jsonrpsee-core = "0.26.0"
ethereum_ssz = "0.9.0"
ethereum_ssz_derive = "0.9.0"
concurrent-queue = "2.5.0"
