[package]
name = "mempool-event-publisher"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Kafka client
rdkafka = { version = "0.36", features = ["tokio"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Reth dependencies
reth-transaction-pool = { workspace = true }
reth-primitives = { workspace = true }
reth-chainspec = { workspace = true }

# Alloy dependencies
alloy-primitives = { workspace = true }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hex encoding/decoding
hex = "0.4"

[dev-dependencies]
# Testing
tokio-test = "0.4"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["kafka"] }
tokio-stream = "0.1"
