[package]
name = "base-builder-cli"
description = "CLI argument definitions for the Base builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
base-builder-core.workspace = true

# CLI
clap.workspace = true

# reth
reth-tracing-otlp.workspace = true
reth-optimism-node.workspace = true

# tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# misc
eyre.workspace = true
url.workspace = true

[dev-dependencies]
base-builder-core = { workspace = true, features = ["test-utils"] }
alloy-primitives.workspace = true
tokio.workspace = true
rstest.workspace = true

[features]
default = []
jemalloc = [ "base-builder-core/jemalloc" ]
