[package]
name = "base-engine-tree"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-engine-tree = { workspace = true }
reth-chain-state.workspace = true
reth-consensus.workspace = true
reth-engine-primitives.workspace = true
reth-errors.workspace = true
reth-evm.workspace = true
reth-payload-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-provider.workspace = true
reth-revm.workspace = true
reth-trie.workspace = true
reth-trie-parallel.workspace = true
reth-trie-db.workspace = true

revm-primitives.workspace = true
op-alloy-rpc-types-engine.workspace = true


alloy-consensus.workspace = true
alloy-eip7928.workspace = true
alloy-eips.workspace = true
alloy-evm.workspace = true
alloy-primitives.workspace = true

rayon.workspace = true
tokio.workspace = true
tracing.workspace = true
eyre.workspace = true
derive_more.workspace = true
crossbeam-channel.workspace = true